# amfiteatr_rl

./: Cargo.toml  README.md
src/: demo.rs  experiencing_policy.rs  learning_policy.rs  lib.rs  tensor_data.rs  tensor_repr.rs  train_config.rs
src/actor_critic/: policy.rs
src/agent/: traits.rs
src/error/: mod.rs  tensor_repr.rs
src/policy/: experiencing_policy.rs  learning_policy.rs  mod.rs  train_config.rs
src/policy/actor_critic/: policy.rs
src/policy/q_learning_policy/: policy.rs
src/q_learning_policy/: mod.rs  policy.rs
src/torch_net/: mod.rs  net_input.rs  net_output.rs  network.rs
