[package]
name = "amfiteatr_rl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amfiteatr_core = {path = "../amfiteatr_core", features = ["demo"]}
tch = "0.14.0"
log = "0.4.20"
thiserror = "1.0.56"
rand = "0.8.5"
